# clodengine

./: .gitignore  CMakeLists.txt  TODO.md  vcpkg.json
Data/shaders/: fft.comp.spv  fragment.glsl  fragment.spv  jfa.comp  jfa.comp.spv  mask_fragment.glsl  mask_fragment.spv  mask_vertex.glsl  outline_fragment.glsl  outline_fragment.spv  outline_vertex.glsl  outline_vertex.spv  shadow_vertex.glsl  shadow_vertex.spv  vertex.glsl  vertex.spv
src/: main.cpp
src/Application/: CMakeLists.txt  animations.cpp  debug.cpp  game.cpp  gpu_utils.cpp  image.cpp  mask_pipeline.cpp  model.cpp  outline_pipeline.cpp  pipeline.cpp  renderer.cpp  renderer2.cpp  scene.cpp  shadow_pipeline.cpp  standard_pipeline.cpp
src/Application/include/: animations.h  camera.h  components.h  game.h  gpu_utils.h  graphics_pipeline.h  image.h  model.h  renderer.h  renderer2.h  scene.h
